Add core module

--- a/settings.gradle
+++ b/settings.gradle
@@ -13,4 +13,8 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "Filimo"
-include ':app'
+include(
+        ":app",
+        ':core',
+)
+
