Add features module

--- a/settings.gradle
+++ b/settings.gradle
@@ -25,3 +25,5 @@ include ':domain'
 include ':domain:common-entity'
 include ':domain:common-jvm'
 include ':domain:repository'
+include ':features'
+include ':features:movies'
